[gd_scene load_steps=3 format=3 uid="uid://bxbwmaa2wwr33"]

[ext_resource type="Script" uid="uid://bo45oowf0uxuu" path="res://components/calendar_day_panel.gd" id="1_8oa01"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8oa01"]
bg_color = Color(0.82224, 0.526727, 0, 1)

[node name="CalendarDayPanel" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_8oa01")
script = ExtResource("1_8oa01")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="DayLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 18
text = "1"

[node name="IconRow" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
